Fixed margin alignment issue for pop-ups in Specials

--- a/my-app/src/pages/Special.css
+++ b/my-app/src/pages/Special.css
@@ -71,8 +71,7 @@
 .cart-message {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
-    display: block; 
-    margin-left: 10px; 
+    display: block;  
     color:#725d4c;
 }
 
